# spinningcube

./: README.md
spinningcube/: CMakeLists.txt  SpinningCube.code-workspace
spinningcube/data/states/: standard.vert
spinningcube/data/transformfeedback/: simple.vert  transformfeedback.vert
spinningcube/src/: helloworld.cpp
